# caelestia-install

./: CHANGES.md  LICENSE  README.md  caelestia-install.sh
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
caelestia-main/: PKGBUILD
caelestia-main/caelestia-user-templates/: hypr-user.conf  hypr-vars.conf  user-config.fish
caelestia-main/fish/: config.fish
caelestia-main/hypr/hyprland/: execs.conf  keybinds.conf
caelestia-main/hypr/scripts/: configs.fish
cli-1.0.6/: pyproject.toml
cli-1.0.6/src/caelestia/utils/: version.py
shell-1.5.1/config/: AppearanceConfig.qml
shell-1.5.1/modules/bar/popouts/: TrayMenu.qml
shell-1.5.1/modules/bar/popouts/kblayout/: KbLayout.qml
shell-1.5.1/modules/controlcenter/: Panes.qml
shell-1.5.1/modules/controlcenter/components/: WallpaperGrid.qml
shell-1.5.1/modules/controlcenter/launcher/: LauncherPane.qml
shell-1.5.1/modules/dashboard/: Media.qml
shell-1.5.1/modules/launcher/: AppList.qml
